Change: Fixed btn styling and text alignment

--- a/src/scss/components/_desktop_nav.scss
+++ b/src/scss/components/_desktop_nav.scss
@@ -15,6 +15,7 @@
 
   .desktop__btn {
     font-family: $font-serif;
+    text-transform: uppercase;
     background-color: $white;
     color: $very-dark-desat-blue;
     transition: all 0.15s ease-in-out;
